canis-major/canis-major-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canis-major
spec:
  ingressClassName: nginx
  rules:
    - host: canis-major.k8s.fiware.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: canis-major
                port:
                  number: 4000
