canis-major/vault-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
spec:
  ingressClassName: nginx
  rules:
    - host: vault-server.k8s.fiware.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
